cabal-version:      3.0
name:               bclk
version:            0.3.0
synopsis:           Binary clock in your terminal
homepage:           https://github.com/ProggerX/bclk
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
category:           Fun
build-type:         Simple

common warnings
    ghc-options: -Wall

executable bclk
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.19.2.0, optparse-applicative, time, unix
    hs-source-dirs:   app
    default-language: GHC2021
